--- a/frontend/admin/src/styles/styles.css
+++ b/frontend/admin/src/styles/styles.css
@@ -16,15 +16,15 @@
 .off-menu {
   position: fixed;
   top: 56px;
-  left: -200px;
+  left: -300px;
   bottom: 0;
-  width: 200px;
+  width: 300px;
   color: #fff;
-  transition: 0.2s all;
+  transition: 0.5s all;
 }
 
 .off-menu-sibling {
-  transition: 0.2s all;
+  transition: 0.5s all;
   padding-left: 0;
 }
 
@@ -33,10 +33,42 @@
 }
 
 .off-menu.show + .off-menu-sibling {
-  padding-left: 200px;
+  padding-left: 300px;
+}
+
+@media screen and (max-width: 600px) {
+  .off-menu.show + .off-menu-sibling {
+    margin-right: -300px;
+  }
 }
 
 .navbar-toggler {
   display: block !important;
   margin-right: 20px !important;
+}
+
+.off-menu ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 10px;
+  border-top: 1px solid rgba(255, 255, 255, 0.2);
+}
+.off-menu ul li {
+  margin-bottom: 10px;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+  padding-bottom: 10px;
+}
+
+.off-menu ul li a {
+  padding: 6px 8px 6px 16px;
+  text-decoration: none;
+  font-size: 14px;
+  color: #fff;
+  display: block;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+.off-menu ul li a:hover {
+  color: #f1f1f1;
 }
